apps/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: vward.roboticsoutreach.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: vaultwarden
            port:
              number: 80
  tls:
  - hosts:
    - vward.roboticsoutreach.org
    secretName: vward.roboticsoutreach.org-tls
